<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view__"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:paddingBottom="10dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/winning"
            android:gravity="center_horizontal"
            android:textSize="@dimen/card_title_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_article_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:text="@string/placeholder_text"
            android:textSize="@dimen/card_text_size"
            android:lineSpacingExtra="@dimen/card_line_spacing"
            android:layout_marginTop="10dp"
            android:paddingBottom="@dimen/desc_tv_padding_bottom"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/fb_read_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_fontIconResource="&#xf178;"
            fancy:fb_iconPosition="right"
            fancy:fb_radius="30dp"
            android:layout_alignBottom="@+id/tv_article_summary"
            android:layout_alignRight="@+id/tv_article_summary"
            fancy:fb_text="@string/read_more"
            fancy:fb_textColor="#FFFFFF" />
    </RelativeLayout>

</android.support.v7.widget.CardView>